--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>  
  <head> 
  <title>Cellular Automation in HTML5 Canvas</title>
+     <!-- TODO: add a lightweight CSS framework for Bootstrap or Material or something -->
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/jquery-ui.min.js"></script>
 <LINK REL=StyleSheet HREF="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/ui-lightness/jquery-ui.css" TYPE="text/css" MEDIA="screen">
@@ -21,7 +22,7 @@
   
   </script>
     
-  <link rel="stylesheet" type="text/css" 
+  <link rel="stylesheet" type="text/css"
 media="screen" href="CellAuto.css">
  </head>  
  <body onload="CellApp.init();Module.init(1280,720);Module.setRule(0,0,0,0,0,0,0,0);">  
